[gd_scene load_steps=15 format=3 uid="uid://dbgvjj2tyxiyr"]

[ext_resource type="Script" path="res://src/platforming/scripts/Enemies/flying_enemy.gd" id="1_5w3l2"]
[ext_resource type="Texture2D" uid="uid://dew1bb7yjujq3" path="res://assets/Enemies/Free Enemies/Free Enemies/Anim/Dragonfly 1A[anim].png" id="2_1dtep"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iljix"]
size = Vector2(52, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l1m2"]
size = Vector2(7, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fug5"]
size = Vector2(4, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_no3wn"]
size = Vector2(56, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lnk8"]
size = Vector2(49, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_jx8ke"]
radius = 132.442

[sub_resource type="CircleShape2D" id="CircleShape2D_ivw6h"]
radius = 149.215

[sub_resource type="Animation" id="Animation_tandr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2t4bf"]
resource_name = "flying_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_qax61"]
resource_name = "flying_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_yes03"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dragonfly1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ppcwo"]
_data = {
"RESET": SubResource("Animation_tandr"),
"flying_left": SubResource("Animation_2t4bf"),
"flying_right": SubResource("Animation_qax61"),
"idle": SubResource("Animation_yes03")
}

[node name="flying_enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_5w3l2")

[node name="Dragonfly1" type="Sprite2D" parent="."]
position = Vector2(-2.99997, -7)
scale = Vector2(1.44687, 1.11719)
texture = ExtResource("2_1dtep")
hframes = 4
vframes = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -4)
shape = SubResource("RectangleShape2D_iljix")

[node name="Left_Collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left_Collision"]
position = Vector2(-28.5, -8.5)
shape = SubResource("RectangleShape2D_3l1m2")

[node name="Right_Collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right_Collision"]
position = Vector2(25, -8.5)
shape = SubResource("RectangleShape2D_2fug5")

[node name="Bottom_Collision" type="Area2D" parent="."]
position = Vector2(0, 10)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom_Collision"]
position = Vector2(-4, 18)
shape = SubResource("RectangleShape2D_no3wn")

[node name="Top_Collision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Collision"]
position = Vector2(0.5, -41.5)
shape = SubResource("RectangleShape2D_2lnk8")

[node name="PlayerDetected" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetected"]
shape = SubResource("CircleShape2D_jx8ke")
debug_color = Color(1, 0, 0, 0.419608)

[node name="PlayerLost" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLost"]
shape = SubResource("CircleShape2D_ivw6h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_ppcwo")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Left_Collision" to="." method="_on_left_collision_body_entered"]
[connection signal="body_entered" from="Right_Collision" to="." method="_on_right_collision_body_entered"]
[connection signal="body_entered" from="Bottom_Collision" to="." method="_on_bottom_collision_body_entered"]
[connection signal="body_entered" from="Top_Collision" to="." method="_on_top_collision_body_entered"]
[connection signal="body_entered" from="PlayerDetected" to="." method="_on_player_detected_body_entered"]
[connection signal="body_exited" from="PlayerLost" to="." method="_on_player_lost_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
